🐛  Fix images overflow in description + ⬆️ Update dependencies

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -932,6 +932,10 @@ Instructions:
             background: white;
           }
         }
+
+        & img {
+          max-width: 100%;
+        }
       }
     }
 
